--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #https://pub.dev/packages/flutter_riverpod
+  flutter_riverpod: ^2.0.0-dev.5
+
   simple_logger: ^1.9.0
 
   # https://pub.dev/packages/cached_network_image
@@ -35,6 +38,9 @@ dependencies:
   fluentui_icons: ^1.0.0
 
   flutter_font_icons: ^2.2.4
+
+  #https://pub.dev/packages/adaptive_dialog/install
+  adaptive_dialog: ^1.6.2+1
 
 dev_dependencies:
   flutter_test:
