add new function

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   #https://pub.dev/packages/adaptive_dialog/install
   adaptive_dialog: ^1.6.2+1
 
+  #https://pub.dev/packages/currency_formatter
+  currency_formatter: ^1.2.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
