--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   fluentui_icons: ^1.0.0
   fluentui_system_icons: ^1.1.168
   flutter_phosphor_icons: ^0.0.1+6
+  flutter_iconly: ^1.0.2
 
   flutter_font_icons: ^2.2.4
 
@@ -46,6 +47,8 @@ dependencies:
 
   #https://pub.dev/packages/currency_formatter
   currency_formatter: ^2.0.0
+
+  go_router: ^6.0.1
 
 dev_dependencies:
   flutter_test:
