--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   cached_network_image: ^3.2.2
 
   #https://pub.dev/packages/modal_bottom_sheet
-  # modal_bottom_sheet: ^2.1.2
+  modal_bottom_sheet: ^3.0.0-pre
 
   # https://pub.dev/packages/expandable
   expandable: ^5.0.1
