--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   #https://pub.dev/packages/flutter_riverpod
   flutter_riverpod: ^2.3.6
 
-  simple_logger: ^1.9.0
+  simple_logger: ^1.9.0+3
   talker_flutter: ^3.1.5
 
   # https://pub.dev/packages/cached_network_image
