--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,13 @@ dependencies:
   #https://pub.dev/packages/flutter_riverpod
   flutter_riverpod: ^2.4.4
 
+  # https://pub.dev/packages/firebase_core
+  firebase_core: ^2.16.0
+  # https://pub.dev/packages/cloud_firestore
+  cloud_firestore: ^4.9.2
+
+  json_annotation: ^4.8.1
+
   simple_logger: ^1.9.0+3
   talker_flutter: ^3.1.5
 
