--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,12 @@ dependencies:
 
   #https://pub.dev/packages/flutter_riverpod
   flutter_riverpod: ^2.4.9
-
   # https://pub.dev/packages/firebase_core
   firebase_core: ^2.24.2
   # https://pub.dev/packages/cloud_firestore
   cloud_firestore: ^4.13.6
+  json_annotation: ^4.8.1
+
 
   simple_logger: ^1.9.0+3
 
