--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   json_annotation: ^4.9.0
 
 
-  simple_logger: ^1.9.0+3
+  simple_logger: ^1.9.0
 
   # https://pub.dev/packages/cached_network_image
   cached_network_image: ^3.3.0
@@ -62,8 +62,8 @@ dependencies:
 
   nested: ^1.0.0
 
-  go_router: ^14.2.1
-  animate_do: ^3.1.2
+  go_router: ^14.2.7
+  animate_do: ^3.3.4
 
 dev_dependencies:
   flutter_test:
